# GOIT_WEB_hw11

./: docker-compose.yml  main.py  pyproject.toml
doc/: conf.py  index.rst
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 2559a9f718ce_add_avatar_field_to_user_model.py  c26c9b5af82f_add_user_confirmation.py  ee18ec7ed1e2_init.py  f002799b8ab4_add_user_model.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: auth.py  contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: reset_password_email.html  verification_email.html
tests/: conftest.py  test_db.py  test_db_connection.py
tests/repository/: test_auth.py  test_contacts.py  test_repo_users.py  test_users.py
tests/routes/: test_route_auth.py  test_route_contacts.py
