[tool.poetry]
name = "goit-web-hw11"
version = "0.1.0"
description = ""
authors = ["C-Hurtmann <constantine2903@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_web_hw11", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = {extras = ["standart"], version = "^0.22.0"}
sqlalchemy = "^2.0.16"
psycopg2-binary = "^2.9.6"
alembic = "^1.11.1"
pydantic = {extras = ["email"], version = "^1.10.9"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
