[tool.poetry]
name = "goit-web-hw11"
version = "0.1.0"
description = ""
authors = ["C-Hurtmann <constantine2903@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_web_hw11", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = {extras = ["standart"], version = "^0.22.0"}
sqlalchemy = "^2.0.16"
psycopg2-binary = "^2.9.6"
alembic = "^1.11.1"
pydantic = {extras = ["email"], version = "^1.10.9"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bscrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
fastapi-mail = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
